--- a/contactMe.html
+++ b/contactMe.html
@@ -17,7 +17,7 @@
 
 <body>
     <header>
-        <a href="#" class="logo"><img src="rony-tech-low-resolution-logo-color-on-transparent-background.png"
+        <a href="index.html" class="logo"><img src="rony-tech-low-resolution-logo-color-on-transparent-background.png"
                 alt=""></a></a>
         <ul class="navbar">
             <li><a href="index.html" style="animation-delay: 0.1s">HOME</a></li>
@@ -35,8 +35,7 @@
     </header>
     <div class="contact">
         <div class="container">
-            <img src="206-2069751_drop-down-menu-comments-drop-down-menu-icon-fotor-20230625105543.png"
-                style="max-width: 10%;" alt="">
+            <img src="photo-fotor-20230625181016.png"alt="">
             <h1 class="display-4">Ronak Dhimmar</h1>
             <p class="lead">Hi,I am computer engineering Student.</p>
             <p>Currently,Studing is GIDC Degree Engineering College,Navsari.</p>
