--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 
 <body>
     <header>
-        <a href="#" class="logo"><img src="rony-tech-low-resolution-logo-color-on-transparent-background.png" alt=""></a></a>
+        <a href="index.html" class="logo"><img src="rony-tech-low-resolution-logo-color-on-transparent-background.png" alt=""></a></a>
             <ul class="navbar">
                 <li><a href="index.html" style="animation-delay: 0.1s">HOME</a></li>
                 <li><a href="" style="animation-delay: 0.2s">ABOUT</a></li>
