--- a/contactMe.html
+++ b/contactMe.html
@@ -7,6 +7,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Home</title>
     <link rel="stylesheet" href="index.css">
+    <link rel="stylesheet" href="contactMe.css">
+
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.3.0/css/all.min.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.1.0/jquery.min.js"></script>
@@ -21,11 +23,10 @@
                 alt=""></a></a>
         <ul class="navbar">
             <li><a href="index.html" style="animation-delay: 0.1s">HOME</a></li>
-            <li><a href="" style="animation-delay: 0.2s">ABOUT</a></li>
-            <li><a href="" style="animation-delay: 0.3s">PORTFOLIO</a></li>
+            <li><a href="projects.html" style="animation-delay: 0.2s">PROJECTS</a></li>
             <li><a href="contactMe.html" style="animation-delay: 0.4s">CONTACT ME</a></li>
         </ul>
-        <div class="main">
+        <div class="menu-div">
             <img src="moon_mod.png" id="icon">
             <!--<div class="search">
                 <input type="text" placeholder="search" required>
@@ -33,20 +34,42 @@
             <div class="fa-solid fa-bars" id="menu-icon"></div>
         </div>
     </header>
-    <div class="contact">
-        <div class="container">
-            <img src="photo-fotor-20230625181016.png"alt="">
-            <h1 class="display-4">Ronak Dhimmar</h1>
-            <p class="lead">Hi,I am computer engineering Student.</p>
-            <p>Currently,Studing is GIDC Degree Engineering College,Navsari.</p>
+    <main>
+        <div class="contact">
+            <div class="container">
+                <img src="photo-fotor-20230625181016.png" alt="">
+                <h1 class="display-4">Ronak Dhimmar</h1>
+                <p class="lead">Hi,I am computer engineering Student.</p>
+                <p>Currently,Studing is GIDC Degree Engineering College,Navsari.</p>
+            </div>
+            <div class="social-links">
+                <a href="https://www.instagram.com/rony_2518/"><i class="fab fa-instagram"></i></a>
+                <a href="https://www.linkedin.com/in/ronak-dhimmar-756361250/"><i class="fab fa-linkedin-in"></i></a>
+                <a href="https://github.com/Rony2518"><i class="fab fa-github"></i></a>
+            </div>
         </div>
-        <div class="social-links">
-            <a href="https://www.instagram.com/rony_2518/"><i class="fab fa-instagram"></i></a>
-            <a href="https://www.linkedin.com/in/ronak-dhimmar-756361250/"><i class="fab fa-linkedin-in"></i></a>
-            <a href="https://github.com/Rony2518"><i class="fab fa-github"></i></a>
+    </main>
+    <footer>
+        <div class="footer">
+            <div class="footlogo">
+                <img src="rony-tech-low-resolution-logo-color-on-transparent-background.png" alt="">
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Tempore maxime quaerat, id libero
+                    perspiciatis necessitatibus ea. Tempore quae explicabo quasi?</p>
+            </div>
+            <div class="line"></div>
+            <div class="navigation">
+                <a href="index.html" style="animation-delay: 0.1s">HOME</a>
+                <a href="projects.html" style="animation-delay: 0.2s">PROJECTS</a>
+                <a href="contactMe.html" style="animation-delay: 0.4s">CONTACT ME</a>
+            </div>
+            <div class="line"></div>
+            <div class="footSocial">
+                <a href="https://www.instagram.com/rony_2518/"><i class="fab fa-instagram"></i></a>
+                <a href="https://www.linkedin.com/in/ronak-dhimmar-756361250/"><i class="fab fa-linkedin-in"></i></a>
+                <a href="https://github.com/Rony2518"><i class="fab fa-github"></i></a>
+            </div>
         </div>
-    </div>
-
+    </footer>
     <script src="index.js"></script>
     <script src="https://kit.fontawesome.com/yourcode.js"></script>
 </body>
