--- a/projects.html
+++ b/projects.html
@@ -7,6 +7,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Home</title>
     <link rel="stylesheet" href="index.css">
+    <link rel="stylesheet" href="projects.css">
+
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.3.0/css/all.min.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.1.0/jquery.min.js"></script>
@@ -18,7 +20,7 @@
 <body>
     <header>
         <a href="index.html" class="logo"><img src="rony-tech-low-resolution-logo-color-on-transparent-background.png"
-                alt=""></a>
+                alt=""></a></a>
         <ul class="navbar">
             <li><a href="index.html" style="animation-delay: 0.1s">HOME</a></li>
             <li><a href="projects.html" style="animation-delay: 0.2s">PROJECTS</a></li>
@@ -33,19 +35,57 @@
         </div>
     </header>
     <main>
-        <div class="intro">
-            <h1>I'm <span>Ronak</span> Dhimmar</h1>
-            <p>
-                This is my portfolio website to showcase my all works.
-            </p>
-            <a href="" class="button">Download CV</a>
+        <div class="wrapper">
+            <div class="project-container">
+                <img src="/browser-window-displaying-workspace-.png" class="image-position" alt="">
+                <div class="link-container"><a href="">P1</a></div>
+            </div>
+            <div class="project-container">
+                <img src="/business,-entrepreneurship-and-growth.png" class="image-position" alt="">
+                <div class="link-container"><a href="">P2</a></div>
+            </div>
+            <div class="project-container">
+                <img src="/busy-project-manager-overwhelmed-by-work.png" class="image-position" alt="">
+                <div class="link-container"><a href="">P3</a></div>
+            </div>
+            <div class="project-container">
+                <img src="/people-collaborating-online.png" class="image-position" alt="">
+                <div class="link-container"><a href="">P1</a></div>
+            </div>
+            <div class="project-container">
+                <img src="/people-collaborating-online.png" class="image-position" alt="">
+                <div class="link-container"><a href="">P1</a></div>
+            </div>
+            <div class="project-container">
+                <img src="/people-collaborating-online.png" class="image-position" alt="">
+                <div class="link-container"><a href="">P1</a></div>
+            </div>
+            <div class="project-container">
+                <img src="/people-collaborating-online.png" class="image-position" alt="">
+                <div class="link-container"><a href="">P1</a></div>
+            </div>
+            <div class="project-container">
+                <img src="/people-collaborating-online.png" class="image-position" alt="">
+                <div class="link-container"><a href="">P1</a></div>
+            </div>
+            <div class="project-container">
+                <img src="/people-collaborating-online.png" class="image-position" alt="">
+                <div class="link-container"><a href="">P1</a></div>
+            </div>
+            <div class="project-container">
+                <img src="/people-collaborating-online.png" class="image-position" alt="">
+                <div class="link-container"><a href="">P1</a></div>
+            </div>
+            <div class="project-container">
+                <img src="/people-collaborating-online.png" class="image-position" alt="">
+                <div class="link-container"><a href="">P1</a></div>
+            </div>
+            <div class="project-container">
+                <img src="/people-collaborating-online.png" class="image-position" alt="">
+                <div class="link-container"><a href="">P1</a></div>
+            </div>
         </div>
     </main>
-    <!-- <div class="social-links">
-        <a href="https://www.instagram.com/rony_2518/"><i class="fab fa-instagram"></i></a>
-        <a href="https://www.linkedin.com/in/ronak-dhimmar-756361250/"><i class="fab fa-linkedin-in"></i></a>
-        <a href="https://github.com/Rony2518"><i class="fab fa-github"></i></a>
-    </div> -->
     <footer>
         <div class="footer">
             <div class="footlogo">
